--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ cw20 = "1.1.0"
 schemars = "0.8.12"
 serde = { version = "1.0.171", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.43" }
+injective-cosmwasm = "0.3.1" 
+derive_more = "=0.99.17" 
 
 [dev-dependencies]
 cw-multi-test = "0.16.5"
